newclay/test/Compiler/StaticEvaluator/Fail/Private2/main.clay
import tools.(PrivateFactorial);

symbol Main;
overload #Main() = PrivateFactorial(8);
